# RealsensetoOpenCV

./: CMakeLists.txt  readme.md  setup.sh
include/: depthCamera.h  intrinsic.h
src/: depthCamera.cpp  intrinsic.cpp
test/: check.cpp
